<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/MenuHolder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/table"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play1"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/p1" />

        <Button
            android:id="@+id/play2"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/p2" />

        <Button
            android:id="@+id/stats"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Personal Stats" />

        <Button
            android:id="@+id/settings"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings" />

        <Button
            android:id="@+id/help"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/help" />

        <TextView
            android:id="@+id/begin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.07"
            android:gravity="bottom"
            android:text="By Jacob Aimino and Ryan McKenna"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>